--- a/trunk/dwsc-master/qos-data-model/pom.xml
+++ b/trunk/dwsc-master/qos-data-model/pom.xml
@@ -14,6 +14,11 @@
 			<url>http://download.eclipse.org/rt/eclipselink/maven.repo</url>
 			<name>EclipseLink Repo</name>
 		</repository>
+		<!-- <repository>
+		    <id>java.net</id>
+		    <url>http://download.java.net/maven/2</url>
+		</repository>
+		<repository> -->		
 	</repositories>
 	<dependencies>
 		<!-- <dependency>
@@ -48,8 +53,37 @@
 	        <version>5.1.22</version>
 	        <scope>provided</scope>
 	    </dependency>
-		
-<!-- 	<dependency>
+		<dependency>
+	        <groupId>javax.servlet</groupId>
+	        <artifactId>javax.servlet-api</artifactId>
+	        <version>3.0.1</version>
+	        <scope>provided</scope>
+		</dependency>	  
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-classic</artifactId>
+			<version>1.0.9</version>
+		</dependency>
+		<dependency>
+	        <groupId>net.sf.json-lib</groupId>
+	        <artifactId>json-lib</artifactId>
+	        <version>2.4</version>
+	        <classifier>jdk15</classifier>
+    	</dependency>		
+<!-- 
+  <dependency>
+    <groupId>javax</groupId>
+    <artifactId>javaee-web-api</artifactId>
+    <version>6.0</version>
+    <scope>provided</scope>
+  </dependency>
+	<dependency>
+	    <groupId>javax</groupId>
+	    <artifactId>javaee-api</artifactId>
+	    <version>6.0</version>
+	    <scope>provided</scope>
+	</dependency>
+	<dependency>	  
 		<groupId>javax.activation</groupId>
 		<artifactId>activation</artifactId>
 		<version>1.1</version>
