--- a/trunk/dwsc-master/pom.xml
+++ b/trunk/dwsc-master/pom.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>bg.uni-sofia.fmi.dwsc</groupId>
@@ -7,7 +8,8 @@
   <name>DWSC Global</name>
   <description>Stores all DWSC modules </description>
   <modules>
-  	<module>qos-data-model</module>
+	<module>qos-data-model</module>
+    <module>yani-bpel-extension</module>
   </modules>
   <build>
   	<plugins>
