--- a/dwsc-master/yani-bpel-extension/.classpath
+++ b/dwsc-master/yani-bpel-extension/.classpath
@@ -12,7 +12,7 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7">
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6">
 		<attributes>
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
@@ -22,5 +22,10 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="E:/Lectures/Master ST/Semester 3/DWSC_Project/trunk/docs/libs/BpelExtension/commons-lang-2.6.0.wso2v1.jar"/>
+	<classpathentry kind="lib" path="E:/Lectures/Master ST/Semester 3/DWSC_Project/trunk/docs/libs/BpelExtension/ode-1.3.5.wso2v7.jar"/>
+	<classpathentry kind="lib" path="E:/Lectures/Master ST/Semester 3/DWSC_Project/trunk/docs/libs/BpelExtension/org.wso2.carbon.logging-4.0.0.jar"/>
+	<classpathentry kind="lib" path="E:/Lectures/Master ST/Semester 3/DWSC_Project/trunk/docs/libs/BpelExtension/org.wso2.carbon.server-4.0.2.jar"/>
+	<classpathentry kind="lib" path="E:/Lectures/Master ST/Semester 3/DWSC_Project/trunk/docs/libs/BpelExtension/org.wso2.ciphertool-1.0.0-wso2v2.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
