--- a/dwsc-master/yani-bpel-extension/pom.xml
+++ b/dwsc-master/yani-bpel-extension/pom.xml
@@ -1,26 +1,41 @@
 <?xml version="1.0"?>
-<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
-  <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <groupId>bg.uni-sofia.fmi.dwsc</groupId>
-    <artifactId>dwsc-master</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
-  </parent>
-  <groupId>bg.uni-sofia.fmi.dwsc</groupId>
-  <artifactId>yani-bpel-extension</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
-  <name>yani-bpel-extension</name>
-  <url>http://maven.apache.org</url>
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-  </properties>
-  <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
-    </dependency>
-  </dependencies>
+<project
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
+	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+	<modelVersion>4.0.0</modelVersion>
+	<parent>
+		<groupId>bg.uni-sofia.fmi.dwsc</groupId>
+		<artifactId>dwsc-master</artifactId>
+		<version>0.0.1-SNAPSHOT</version>
+	</parent>
+	<!--groupId>bg.uni-sofia.fmi.dwsc</groupId-->
+	<artifactId>yani-bpel-extension</artifactId>
+	<!-- version>0.0.1-SNAPSHOT</version-->
+	<name>yani-bpel-extension</name>
+	<url>http://maven.apache.org</url>
+	
+	<!-- repositories>
+		<repository>
+			<id>wso2-nexus</id>
+			<url>http://dist.wso2.net/maven2/org/apache/ode/wso2/ode/1.3.5.wso2v7/</url>
+			<name>WSO2 internal Repository</name>
+		</repository>	
+	</repositories -->
+	
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	</properties>
+	<dependencies>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>3.8.1</version>
+			<scope>test</scope>
+		</dependency>
+		<!--dependency>
+			<groupId>org.apache.ode.wso2</groupId>
+			<artifactId>ode</artifactId>
+			<version>1.3.5-SNAPSHOT.wso2v2</version>
+		</dependency-->
+	</dependencies>
 </project>
