--- a/trunk/dwsc-master/yani-bpel-extension/.classpath
+++ b/trunk/dwsc-master/yani-bpel-extension/.classpath
@@ -27,5 +27,8 @@
 	<classpathentry kind="lib" path="E:/Lectures/Master ST/Semester 3/DWSC_Project/trunk/docs/libs/BpelExtension/org.wso2.carbon.logging-4.0.0.jar"/>
 	<classpathentry kind="lib" path="E:/Lectures/Master ST/Semester 3/DWSC_Project/trunk/docs/libs/BpelExtension/org.wso2.carbon.server-4.0.2.jar"/>
 	<classpathentry kind="lib" path="E:/Lectures/Master ST/Semester 3/DWSC_Project/trunk/docs/libs/BpelExtension/org.wso2.ciphertool-1.0.0-wso2v2.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/yani-model"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
+	<classpathentry kind="lib" path="E:/Lectures/Master ST/Semester 3/DWSC_Project/trunk/docs/libs/BpelExtension/tests/xercesImpl-2.8.1.wso2v2.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
