--- a/dwsc-master/yani-bpel-extension/pom.xml
+++ b/dwsc-master/yani-bpel-extension/pom.xml
@@ -8,19 +8,19 @@
 		<artifactId>dwsc-master</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
-	<!--groupId>bg.uni-sofia.fmi.dwsc</groupId-->
+	<groupId>bg.uni-sofia.fmi.dwsc.yani</groupId>
 	<artifactId>yani-bpel-extension</artifactId>
 	<!-- version>0.0.1-SNAPSHOT</version-->
 	<name>yani-bpel-extension</name>
 	<url>http://maven.apache.org</url>
 	
-	<!-- repositories>
+	<repositories>
 		<repository>
 			<id>wso2-nexus</id>
-			<url>http://dist.wso2.net/maven2/org/apache/ode/wso2/ode/1.3.5.wso2v7/</url>
+			<url>http://maven.wso2.org/nexus/content/groups/wso2-public/</url>
 			<name>WSO2 internal Repository</name>
 		</repository>	
-	</repositories -->
+	</repositories>
 	
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -32,10 +32,30 @@
 			<version>3.8.1</version>
 			<scope>test</scope>
 		</dependency>
-		<!--dependency>
+		<dependency>
 			<groupId>org.apache.ode.wso2</groupId>
 			<artifactId>ode</artifactId>
-			<version>1.3.5-SNAPSHOT.wso2v2</version>
-		</dependency-->
+			<version>1.3.5.wso2v7</version>
+		</dependency>
+		<dependency>
+			<groupId>commons-lang.wso2</groupId>
+			<artifactId>commons-lang</artifactId>
+			<version>2.6.0.wso2v1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.wso2.carbon</groupId>
+			<artifactId>org.wso2.carbon.logging</artifactId>
+			<version>4.0.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.wso2.carbon</groupId>
+			<artifactId>org.wso2.carbon.server</artifactId>
+			<version>4.0.2</version>
+		</dependency>
+		<dependency>
+			<groupId>org.wso2.ciphertool</groupId>
+			<artifactId>org.wso2.ciphertool</artifactId>
+			<version>1.0.0-wso2v2</version>
+		</dependency>
 	</dependencies>
 </project>
