--- a/trunk/dwsc-master/pom.xml
+++ b/trunk/dwsc-master/pom.xml
@@ -14,6 +14,7 @@
 	<module>qos-data-model</module>
     <module>yani-bpel-extension</module>
     <module>qos-data-api</module>
+    <module>qosmonitor</module>
   </modules>
   <build>
   	<plugins>
