--- a/dwsc-master/pom.xml
+++ b/dwsc-master/pom.xml
@@ -15,6 +15,7 @@
     <module>yani-bpel-extension</module>
     <module>qos-data-api</module>
     <module>qosmonitor</module>
+    <module>axis2-services</module>
   </modules>
   <build>
   	<plugins>
@@ -29,6 +30,18 @@
                  <encoding>UTF-8</encoding>
             </configuration>
         </plugin>
+		<plugin>
+	      <groupId>org.apache.tomcat.maven</groupId>
+	      <artifactId>tomcat7-maven-plugin</artifactId>
+	      <version>2.0</version>
+	      <configuration>
+			<server>myserver</server>
+			<url>http://localhost:8080/manager/text</url> 
+			<!-- <path>/qosapi</path> -->
+			<contextReloadable>true</contextReloadable>				
+			<update>true</update>
+	      </configuration>
+	    </plugin>        
 <!--         
 		<plugin>
 		  <groupId>org.apache.maven.plugins</groupId>
