#000 Mavenize Axis2 Web Service Project - in progress.
Proxy class for addition service is still not working @ axis2-clients.

--- a/dwsc-master/pom.xml
+++ b/dwsc-master/pom.xml
@@ -15,7 +15,7 @@
     <module>yani-bpel-extension</module>
     <module>qos-data-api</module>
     <module>qosmonitor</module>
-    <module>axis2-services</module>
+    <module>axis2-master</module>
   </modules>
   <build>
   	<plugins>
