--- a/dwsc-master/yani-bpel-extension/pom.xml
+++ b/dwsc-master/yani-bpel-extension/pom.xml
@@ -37,7 +37,7 @@
 			<artifactId>ode</artifactId>
 			<version>1.3.5.wso2v7</version>
 		</dependency>
-		<dependency>
+		<!-- dependency>
 			<groupId>commons-lang.wso2</groupId>
 			<artifactId>commons-lang</artifactId>
 			<version>2.6.0.wso2v1</version>
@@ -56,6 +56,6 @@
 			<groupId>org.wso2.ciphertool</groupId>
 			<artifactId>org.wso2.ciphertool</artifactId>
 			<version>1.0.0-wso2v2</version>
-		</dependency>
+		</dependency-->
 	</dependencies>
 </project>
