--- a/trunk/dwsc-master/yani-bpel-extension/.classpath
+++ b/trunk/dwsc-master/yani-bpel-extension/.classpath
@@ -25,5 +25,6 @@
 	<classpathentry combineaccessrules="false" kind="src" path="/yani-model"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="lib" path="E:/Lectures/Master ST/Semester 3/DWSC_Project/trunk/docs/libs/BpelExtension/tests/xercesImpl-2.8.1.wso2v2.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/BpelModelAvaluator"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
