--- a/dwsc-master/qos-data-model/pom.xml
+++ b/dwsc-master/qos-data-model/pom.xml
@@ -41,12 +41,11 @@
 	        <artifactId>eclipselink</artifactId>
 	        <version>2.4.1</version>
 	    </dependency>
-		<dependency>
+		<!-- <dependency>
 		    <groupId>org.eclipse.persistence</groupId>
 		    <artifactId>javax.persistence</artifactId>
 		    <version>2.0.3</version>
-		    <!--<scope>provided</scope>--><!-- since I'm running inside a Java EE container -->
-		</dependency>
+		</dependency> -->
 		<dependency>
 	        <groupId>mysql</groupId>
 	        <artifactId>mysql-connector-java</artifactId>
