#227 / #252 Register Web Services for QoS Selection / Register an initial set of Services to support further dev & testing
DWSC UDDI Utility is implemented to automate publishing of DWSC web services to the UDDI registry.

--- a/dwsc-master/pom.xml
+++ b/dwsc-master/pom.xml
@@ -16,6 +16,7 @@
     <module>qos-data-api</module>
     <module>qosmonitor</module>
     <module>axis2-master</module>
+    <module>uddi-util</module>
   </modules>
   <build>
   	<plugins>
