--- a/dwsc-master/qos-data-api/pom.xml
+++ b/dwsc-master/qos-data-api/pom.xml
@@ -31,8 +31,11 @@
     	<version>2.2.7</version>
     	<!-- <scope>provided</scope> -->
     </dependency>
-    
-    
+	<dependency>
+  		<groupId>org.apache.juddi</groupId>
+  		<artifactId>juddi-client</artifactId>
+  		<version>3.1.3</version>
+	</dependency>
   </dependencies>
   <build>
 	<finalName>qos-data-api</finalName>
