--- a/trunk/dwsc-master/axis2-master/pom.xml
+++ b/trunk/dwsc-master/axis2-master/pom.xml
@@ -21,6 +21,7 @@
   <modules>
     <module>axis2-services</module>
 	<module>axis2-clients</module>
+	<module>service-adapter</module>
   </modules>
   <dependencies>
     <dependency>
