--- a/trunk/dwsc-master/pom.xml
+++ b/trunk/dwsc-master/pom.xml
@@ -18,6 +18,7 @@
     <module>axis2-master</module>
     <module>service-adapter</module>
     <module>uddi-util</module>
+    <module>yani-qos-calculator</module>
   </modules>
   <build>
   	<plugins>
