#261/#262 Update POM of entire project with adding the qos-calculator module

--- a/dwsc-master/pom.xml
+++ b/dwsc-master/pom.xml
@@ -18,6 +18,7 @@
     <module>axis2-master</module>
     <module>service-adapter</module>
     <module>uddi-util</module>
+    <module>yani-qos-calculator</module>
   </modules>
   <build>
   	<plugins>
